--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body style="background-color:#ADADAD;">
 <h1>Site sobre minha dieta 😎 <br></h1>
 <i style="font-size:75%;" title="Passa o mouse no itálico">OBS<br></i>
-<i title="Coisa de pobre xisde">Não é necessário seguir estritamente as receitas!!<br></i>
+<i>Não é necessário seguir estritamente as receitas!!<br></i>
 
 <p>A dieta vai ser <b><a href="https://www.tuasaude.com/bulking/#:~:text=O%20bulking%20corresponde%20ao%20processo,que%20a%20dieta%20%C3%A9%20mais"
     target="_blank" title="O bulking é a primeira fase do processo de hipertrofia que consiste no aumento do consumo de calorias,
@@ -46,7 +46,6 @@ sendo essa estratégia mais usada pelos atletas.">sujo</i></p>
 </body>
 </head>
 </html>
-
 
 
 
