Grosso do texto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@ durante 4 a 6 meses, para facilitar o ganho de peso e de massa muscular. ">Bulki
 o que leva ao aumento não só de peso mas também de gordura.
     
 Apesar de não ser saudável e do processo de cutting ser mais lento, o ganho de massa muscular durante o bulking sujo é mais rápido, 
-sendo essa estratégia mais usada pelos atletas.">sujo</i></p>
+sendo essa estratégia mais usada pelos atletas.">sujo<br></i></p>
+<sub>Bulking limpo sendo onde se preocupamos com oque está sendo ingerido, para ser alimentos saudáveis e funcionais, mas mesmo assim ingerindo mais 
+calorias do que gastamos.<br></sub>
+
+<sub>Bulking sujo é quando não se importamos com o que comemos, tendo um consumo maior de carboidratos e gorduras não saudáveis, 
+transformando o cutting mais lento, mas o ganho de massa muscular é mais rapido, sendo a estratégia mais usada por atletas.<br></sub>
 
 <p>Vou dividir as receitas por refeições:</p>
 <ul>
@@ -28,19 +33,181 @@ sendo essa estratégia mais usada pelos atletas.">sujo</i></p>
 <h2 id="C1">Café da manhã:</h2>
 
 
+<h4>Rabanada</h4>
+<p>Ingredientes:</p>
+<ul>
+    <li>Pão</li>
+    <li>Ovo</li>
+    <li>Leite</li>
+    <li>Canela em pó</li>
+    <li>Creme de leite ou Extrato de baunilha</li>
+    <li>Manteiga</li>
+</ul>
+<p><br>Colocar os ovos, leite, canela o creme de leite ou baunilha em uma bacia e molhar o pão nela e depois fritar com manteiga ou óleo.<br></p>
+
+
+<h4>Cereal com Leite Integral</h4>
+<p>Flocos de trigo melhor que tá tendo</p>
+
+<h4>Ovo e Bacon na Torrada</h4>
+<p>Ingredientes:</p>
+<ul>
+    <li>Pão</li>
+    <li>Ovo</li>
+    <li>Bacon</li>
+    <li>Manteiga(opcional)</li>
+</ul>
+<p>Começa com o ovo na frigideira, depois bacon e por último o pão, esquentar e passar um pouco de manteiga ou margarina no pão.</p>
+
 
 <h2 id="C2">Almoço:</h2>
 
+<h4>Burrito</h4>
+<p>Ingredientes:</p>
+<ul>
+    <li>Peito de Frango</li>
+    <li>Cebola</li>
+    <li>Pimentão Vermelho</li>
+    <li>Pimentão Verde</li>
+    <li>Limão</li>
+    <li>Tomate</li>
+    <li>Abacate</li>
+    <li>Alface</li>
+    <li>Salsa</li>
+    <li>Pimenta Seca</li>
+    <li>Tempero de Churrasco(opcional)</li>
+</ul>
+<p>Picar tudo em pedaços pequenos. O Abacate picar e acrescentar um pouco de suco de Limão e Salsa picada, Pimentão em tiras.<br>
+O Frango corte em tiras e deixe em uma bacia temperando, tempero churrasco. Começar fritando a Cebola, depois de ficar transparente adicionar
+o tomate, frite bem e adicione o frango, mexendo bem para cozinhar, depois adicionar o pimentão em tiras.<br>
+Preparar as tortilhas, aquecendo elas.<br>
+Para montar comece com a alface, carne e legumes e terminar com o abacate e suco de limão com a salsa picada.</p>
+
+<h4>Massa com Pesto</h4>
+<p>Ingredientes:</p>
+<ul>
+    <li>Dente de Alho</li>
+    <li>Pinoli ou Nozes sem Casca</li>
+    <li>Manjericão</li>
+    <li>Queijo</li>
+    <li>Azeite</li>
+    <li>Pimenta do Reino</li>
+</ul>
+<p>Descasque o alho e esprema, passe para uma tigela, adicione o sal e misture. Levar o Pinoli ou Nozes ao fogo médio e dar uma leve torrada,
+junte o alho e sal. Lave e seque o manjericão, picar e colocar na tigela e adicionar o queijo ralado e azeite, misturar até formar uma pasta
+homogênea e temperar com pimenta do reino.
+</p>
+
+
+<h4>Panquecas com Proteína</h4>
+<p>Ingredientes:</p>
+<ul>
+    <li>Aveia</li>
+    <li>Ovo</li>
+    <li>Fermento em pó</li>
+    <li>Canela em pó</li>
+    <li>Whey</li>
+    <li>Linhaça</li>
+    <li>Banana</li>
+</ul>
+<p> 1 Copo de Aveia, 1 Banana, 2 Ovos, 1 Colher Pequena de Fermento, um Pouco de Sal e Canela, 1 ou 2 Scoop de Whey, 2 Colher Pequena de Linhaça,
+Tudo no liquidificador e depois na frigideira em fogo médio. Cobertura com Fruta, Calda ou Mel.<br></p>
+
+
+
+<h4>Frango e Arroz</h4>
+<p>Pode ser cozido ou frito.</p>
+
+
+
+<h4>Pizza 👍 </h4>
+<p>Ocasionalmente</p>
+
+
+<h4>Tacos</h4>
+<p>Ingredientes:</p>
+<ul>
+    <li>Tortilhas</li>
+    <p>Guacamole:</p>
+    <li>2 Tomate</li>
+    <li>1 Pimenta</li>
+    <li>Folhas de Coentro</li>
+    <li>Abacate</li>
+    <li>Cebola</li>
+    <li>Suco de limão</li>
+    <li>3 Colher de Azeite</li>
+    <p>Chilli:</p>
+    <li>600g de Carne de Porco Cozida 250g de Cochão Mole e Alcatra Cozida</li>
+    <li>Óleo</li>
+    <li>2 Cebola</li>
+    <li>3 Fatias de Bacon</li>
+    <li>1 Tomate</li>
+    <li>Colher de Sopa de Chilli em pó</li>
+    <li>1 Xícara de Feijão em Conserva</li>
+    <li>6 Folhas de Alfaçe</li>
+    <li>Suco de limão</li>
+</ul>
+<p>Guacamole:<br>Pique o Tomate em pequenos pedaços, pimenta sem as sementes e filamento branco, as folhas de coentro, descascar o abacate
+e tirar o caroço, colocar em um prato amassar e adicionar um pouco do suco de limão, adicionar o tomate, pimenta, coentro, cebola, azeite de oliva
+e sal e misture<br>Chilli:<br>Desfiar as carnes e reserve, Óleo, Cebola e Bacon em uma panela, depois adicionar a carne, tomate
+e 4 colher de sopa de água, deixar incorporar em fogo baixo, mexendo um pouco até dourar, retire e reserve. Colocar o feijão em uma outra
+panela e cozinhar até formar uma pasta, usar o resto de suco de limão, Depois montar ele, Chilli, Guacamole e Alfaçe.<br>
+
+<sub>Colocar um queijo na carne hmmmmmm</sub></p>
+
+<h4>Macarrão com Atum</h4>
+<p>Ingredientes:</p>
+<ul>
+    <li>Lata de Atum</li>
+    <li>Temperos opcionais</li>
+</ul>
+<p>Cozinhar os temperos antes e deixar o atum por último.</p>
 
 
 <h2 id="C3">Lanche:</h2>
+
+<h4>Sanduíche de pasta de amendoim</h4>
+<p>Padrão</p>
+
+<h4>Shake de Proteina com Pasta de Amendoim</h4>
+<p>Ingredientes:</p>
+<ul>
+    <li>Pasta de amendoim</li>
+    <li>Leite</li>
+    <li>Whey</li>
+    <li>Aveia em flocos</li>
+</ul>
+<p>300ml de leite, 1 scoop de whey, 1 colher de pasta de amendoim e 2 colher de aveia em flocos. Tudo isso no liquidificador.</p>
+
+<h4>Xis com Hamburguer de Frango</h4>
+<p>Padrão</p>
+
+<h4>Batida de frutas</h4>
+<p>Ingredientes:</p>
+<ul>
+    <li>Banana</li>
+    <li>Frutas (Opcionais)</li>
+    <li>Leite</li>
+    <li>Aveia</li>
+    <li>Opcionais:Morango, Uva, Maçã, Linhaça, Chia, Canela em pó</li>
+</ul>
+<p>Cortar as frutas, tudo no liquidificador.</p>
+
+
+
+<h4>Granola com Iogurte Grego</h4>
+<p>Ingredientes:</p>
+<ul>
+    <li>Frutas</li>
+    <li>Whey</li>
+</ul>
+
 
 
 
 <h2 id="C4">Janta:</h2>
 
 
-<p class="hover-me" data-title="I Show up on Hover">Some Text</p>
 
 
 </body>
